applications/software/home1/rustfs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rustfs
  namespace: rustfs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rustfs
  template:
    metadata:
      labels:
        app: rustfs
    spec:
      tolerations:
      - key: "PrivateNode"
        operator: "Equal"
        value: "home1"
      securityContext:
        fsGroup: 2000
      containers:
      - name: rustfs
        image: mirror.gcr.io/rustfs/rustfs:latest@sha256:fa19210ac4697c79d7ccca1ec9b0eb91aebacc6691991ffb14014bb3c67e6cc3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
          name: http
        - containerPort: 9001
          name: console
        securityContext:
          runAsUser: 0
          runAsGroup: 2000
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data-rustfs-0
